// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav check display LeaderBoard view after click LeaderBoard 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="bg-body-tertiary navbar navbar-expand-lg navbar-light"
      >
        <div
          class="container"
        >
          <span
            class="navbar-brand"
          >
            <h2>
              Employee Poll
            </h2>
          </span>
          <button
            aria-controls="basic-navbar-nav"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="basic-navbar-nav"
          >
            <div
              class="me-auto navbar-nav"
            >
              <a
                class="nav-link"
                href="/"
              >
                Home
              </a>
              <a
                class="nav-link"
                data-testid="newNavLink"
                href="/new"
              >
                New
              </a>
              <a
                class="nav-link"
                href="/leader-board"
              >
                LeaderBoard
              </a>
            </div>
          </div>
          <span
            class="navbar-brand"
          >
            <img
              class="img-table rounded-circle"
            />
            <span
              class="ms-2"
            />
            <button
              class="ms-2 btn btn-secondary btn-sm"
              type="button"
            >
              Logout
            </button>
          </span>
        </div>
      </nav>
    </div>
    <div>
      <div>
        <h2
          class="h-body"
        >
          LeaderBoard
        </h2>
        <table
          class="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th>
                Users
              </th>
              <th>
                Answered
              </th>
              <th>
                Created
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h2
        class="h-body"
      >
        LeaderBoard
      </h2>
      <table
        class="table table-striped table-bordered table-hover"
      >
        <thead>
          <tr>
            <th>
              Users
            </th>
            <th>
              Answered
            </th>
            <th>
              Created
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Nav check display nav bar 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="bg-body-tertiary navbar navbar-expand-lg navbar-light"
      >
        <div
          class="container"
        >
          <span
            class="navbar-brand"
          >
            <h2>
              Employee Poll
            </h2>
          </span>
          <button
            aria-controls="basic-navbar-nav"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="basic-navbar-nav"
          >
            <div
              class="me-auto navbar-nav"
            >
              <a
                class="nav-link"
                href="/"
              >
                Home
              </a>
              <a
                class="nav-link"
                data-testid="newNavLink"
                href="/new"
              >
                New
              </a>
              <a
                class="nav-link"
                href="/leader-board"
              >
                LeaderBoard
              </a>
            </div>
          </div>
          <span
            class="navbar-brand"
          >
            <img
              class="img-table rounded-circle"
            />
            <span
              class="ms-2"
            />
            <button
              class="ms-2 btn btn-secondary btn-sm"
              type="button"
            >
              Logout
            </button>
          </span>
        </div>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="bg-body-tertiary navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <h2>
            Employee Poll
          </h2>
        </span>
        <button
          aria-controls="basic-navbar-nav"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
          id="basic-navbar-nav"
        >
          <div
            class="me-auto navbar-nav"
          >
            <a
              class="nav-link"
              href="/"
            >
              Home
            </a>
            <a
              class="nav-link"
              data-testid="newNavLink"
              href="/new"
            >
              New
            </a>
            <a
              class="nav-link"
              href="/leader-board"
            >
              LeaderBoard
            </a>
          </div>
        </div>
        <span
          class="navbar-brand"
        >
          <img
            class="img-table rounded-circle"
          />
          <span
            class="ms-2"
          />
          <button
            class="ms-2 btn btn-secondary btn-sm"
            type="button"
          >
            Logout
          </button>
        </span>
      </div>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Nav check display new question view after click New 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="bg-body-tertiary navbar navbar-expand-lg navbar-light"
      >
        <div
          class="container"
        >
          <span
            class="navbar-brand"
          >
            <h2>
              Employee Poll
            </h2>
          </span>
          <button
            aria-controls="basic-navbar-nav"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="basic-navbar-nav"
          >
            <div
              class="me-auto navbar-nav"
            >
              <a
                class="nav-link"
                href="/"
              >
                Home
              </a>
              <a
                class="nav-link"
                data-testid="newNavLink"
                href="/new"
              >
                New
              </a>
              <a
                class="nav-link"
                href="/leader-board"
              >
                LeaderBoard
              </a>
            </div>
          </div>
          <span
            class="navbar-brand"
          >
            <img
              class="img-table rounded-circle"
            />
            <span
              class="ms-2"
            />
            <button
              class="ms-2 btn btn-secondary btn-sm"
              type="button"
            >
              Logout
            </button>
          </span>
        </div>
      </nav>
    </div>
    <div>
      <div>
        <h2
          class="h-body"
        >
          Create your own poll
        </h2>
        <h3
          class="center"
        >
          Would you rather
        </h3>
        <form
          class=""
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              First Option
            </label>
            <input
              class="form-control"
              placeholder="Enter first option"
              type="input"
              value=""
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              Second Option
            </label>
            <input
              class="form-control"
              placeholder="Enter second option"
              type="input"
              value=""
            />
          </div>
          <button
            class="btn btn-primary"
            disabled=""
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h2
        class="h-body"
      >
        Create your own poll
      </h2>
      <h3
        class="center"
      >
        Would you rather
      </h3>
      <form
        class=""
      >
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            First Option
          </label>
          <input
            class="form-control"
            placeholder="Enter first option"
            type="input"
            value=""
          />
        </div>
        <div
          class="mb-3"
        >
          <label
            class="form-label"
          >
            Second Option
          </label>
          <input
            class="form-control"
            placeholder="Enter second option"
            type="input"
            value=""
          />
        </div>
        <button
          class="btn btn-primary"
          disabled=""
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
